# student-grading-system

./: .gitignore  CMakeLists.txt  Makefile  MyLib.h  Person.cpp  Person.h  README.md  Timer.h  failed_vector_students10000.txt  main.cpp  passed_list_students10000.txt  student_grading_system
src/: GradeCalulator24.cpp  InputPerson.cpp  InputPerson.h  MyLib.h  OutputPerson.cpp  OutputPerson.h  Person.cpp  Person.h  Timer.h  Utilities.h  main.cpp
